smokeping/deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: smokeping
  labels:
    k8s-app: smokeping
spec:
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: smokeping
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      containers:
      - name: smokeping
        image: dvorak/docker-smokeping
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: "/config"
            name: config
          - mountPath: "/data"
            name: data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: smokeping-config
        - name: data
          persistentVolumeClaim:
            claimName: smokeping-data
