smokeping/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: smokeping
spec:
  selector:
    k8s-app: smokeping
  ports:
  - name: web
    port: 80
    targetPort: 80
