smokeping/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smokeping
  labels:
    k8s-app: smokeping
    stable.k8s.psg.io/kcm.class: "default"
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - "smokeping.k.draiocht.net"
      secretName: "smokeping-tls"
  rules:
    - host: "smokeping.k.draiocht.net"
      http:
        paths:
          - path: /
            backend:
              serviceName: smokeping
              servicePort: 80
